feat: InputView, OutputView 도입 - GameApplication에서 입력과 출력 로직 분리